<resources>
    <string name="app_name">Bus GO</string>
    <string name="email"><u>thedat246@gmail.com</u></string>
    <string name="author"> DatVIT </string>
    <string name="google_maps_key">AIzaSyDLn3hZhf3xy6y3AgapPLXXa-o1SODkbA4</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="bus_route">System Buses</string>
    <string name="bus_stop">Bus Stops</string>
    <string name="ticket_sale">Ticket Sales</string>
    <string name="nearest_bus">Nearest Bus</string>
    <string name="search_locations">Search Locations</string>
    <string name="search_route">Search Route</string>
    <string name="utilities">Utilities</string>
    <string name="news">News</string>
    <string name="tools">Tools</string>
    <string name="info">Information</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="more_app">More Application</string>
    <string name="exit_app">Exit Application</string>
    <string name="detail">Detail</string>
    <string name="display_map">Show Map</string>
    <string name="show_go">Show Go</string>
    <string name="show_back">Show Back</string>
    <string name="show_all">Show All</string>
    <string name="none">None</string>
    <string name="street_map">Street map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="detailed_satellite_map">Detailed satellite map</string>
    <string name="home_map">Map homes</string>
    <string name="bus_list">Bus list</string>
    <string name="option">Option</string>
    <string name="exit">Exit</string>
    <string name="direct">Direction</string>
    <string name="suggest">Suggest</string>
    <string name="hint_text_search_location">Enter a location to find</string>
    <string name="hint_text_search_bus_stop">Enter a name bus station to find</string>
    <string name="hint_text_search_bus">Enter number bus looking</string>
    <string name="introduce">Bus Go systems in Hanoi is pleased to welcome you to use bus lookup service on our phones</string>
    <string name="check_wifi">Please check your internet connection</string>
    <string name="noti_not_find">Not find this location</string>
    <string name="noti_not_find_bus_near">Not find any point of the bus next to you</string>
    <string name="not_find">Not find</string>
    <string name="not_find_your_location">Not find your location</string>
    <string name="noti_exit_app">Do you want to exit the app?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>


</resources>
